# spahtmx

./: .air.toml  .dockerignore  .env.example  .gitignore  .output.txt  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rust  GEMINI.md  Makefile  README.md  compose.yaml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  input.css  main.go  nobel-prize.json  package-lock.json  test.http
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  docker-image.yml  docker-publish.yml  go.yml
cmd/insertmdb/: main.go
cmd/mongodb/: main.go
cmd/server/: main.go
internal/adapter/database/: prize_repository.go  user_repository.go
internal/adapter/gorm/: repository.go
internal/adapter/mongodb/: prize_repository.go  repository.go  user_repository.go
internal/app/: auth_service.go  prize_service.go  user_service.go
internal/config/: config.go
internal/domain/: errors.go  models.go  repositories.go  repository.go  user.go
internal/model/: setup.go  user.go
k8s/: deployment.yaml  service.yaml
src/: main.rs
src/adapter/: mod.rs
src/app/: auth_service.rs  mod.rs  prize_service.rs  user_service.rs
src/config/: mod.rs
src/domain/: models.rs  repositories.rs
templates/: about.html  about.templ  about_templ.go  admin.html  admin.templ  admin_templ.go  base.html  base.templ  base_templ.go  footer.html  footer.templ  footer_templ.go  index.html  index.templ  index_templ.go  login.html  nav.html  nav.templ  nav_templ.go  prize.html  prize_list.html  user_list.html  userlist.html  userlist.templ  userlist_templ.go
(+22 files in other folders)
