[package]
name = "spahtmx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
mongodb = { version = "3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures-util = "0.3"
bson = { version = "3.1.0", features = ["uuid-1"] }
tower-sessions = "0.12.0"
async-trait = "0.1"
bcrypt = "0.18.0"
